# vibes

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  commit_message.py  justfile  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deps-update.yml  lint_and_test.yml  scheduled-test.yml  weekly-ci.yml
docs/: index.md
scripts/: gen_ref_pages.py
src/gitmoji_llm/: cli.py
src/vibes/: __init__.py  __main__.py  cli.py  config.py  llm.py  prompt.py
src/vibes/resources/: __init__.py  message-style-emoji.md  prompt.md
tests/: test_.py  test_cli.py  test_config.py  test_main.py  test_prompt.py
