[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=3.7.0",
    "gitpython>=3.1.44",
    "openai>=1.61.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
vibes = "vibes.cli:app"
